[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/d_daok_piezas_strip13.png" type="Texture" id=1]
[ext_resource path="res://scripts/PonerBuilding.gd" type="Script" id=2]
[ext_resource path="res://scenes/otros/ValueEtiqueta.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/d_daok_edificios_strip25.png" type="Texture" id=4]
[ext_resource path="res://scenes/otros/NetoValue.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/d_daok_botones_strip30.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=3]
radius = 52.0384

[sub_resource type="CircleShape2D" id=2]
radius = 374.001

[node name="PParque" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Construccion" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 161
input_pickable = false
monitorable = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="Construccion"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Reserva" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 136
input_pickable = false
monitorable = false
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="Reserva"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Imagen" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
__meta__ = {
"_edit_lock_": true
}

[node name="Frente" type="Sprite" parent="Imagen"]
texture = ExtResource( 4 )
centered = false
offset = Vector2( -149, -185 )
hframes = 25
frame = 14
__meta__ = {
"_edit_lock_": true
}

[node name="Rosa" type="Sprite" parent="Imagen"]
position = Vector2( 1, -87 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -57, -116 )
hframes = 13
frame = 4
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Entrada" type="Sprite" parent="Imagen"]
position = Vector2( -20, 18 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
hframes = 30
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Neto" parent="." instance=ExtResource( 5 )]

[node name="Value" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -96 )

[node name="Cimientos" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="C1" type="Node2D" parent="Cimientos"]
position = Vector2( -32, -2 )
__meta__ = {
"_edit_lock_": true
}

[node name="C2" type="Node2D" parent="Cimientos"]
position = Vector2( 1, 27 )
__meta__ = {
"_edit_lock_": true
}

[node name="C3" type="Node2D" parent="Cimientos"]
position = Vector2( 35, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="C4" type="Node2D" parent="Cimientos"]
position = Vector2( 1, -30 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="area_entered" from="Construccion" to="." method="_on_Construccion_area_entered"]
[connection signal="area_exited" from="Construccion" to="." method="_on_Construccion_area_exited"]
[connection signal="area_entered" from="Reserva" to="." method="_on_Reserva_area_entered"]
[connection signal="area_exited" from="Reserva" to="." method="_on_Reserva_area_exited"]
